crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__word-groups.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "scoped_annotations": [
                {
                  "text": "foo",
                  "type": "explanation"
                }
              ],
              "span": {
                "end": 157,
                "start": 154
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "man",
                  "type": "text"
                }
              ],
              "raw_text": "man",
              "span": {
                "end": 169,
                "start": 166
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "what",
                        "type": "text"
                      }
                    ],
                    "raw_text": "what",
                    "span": {
                      "end": 175,
                      "start": 171
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "in",
                        "type": "text"
                      }
                    ],
                    "raw_text": "in",
                    "span": {
                      "end": 178,
                      "start": 176
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "the",
                        "type": "text"
                      }
                    ],
                    "raw_text": "the",
                    "span": {
                      "end": 182,
                      "start": 179
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "world",
                        "type": "text"
                      }
                    ],
                    "raw_text": "world",
                    "span": {
                      "end": 188,
                      "start": 183
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "bar",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "isn't",
                  "type": "text"
                }
              ],
              "raw_text": "isn't",
              "scoped_annotations": [
                {
                  "text": "baz",
                  "type": "explanation"
                }
              ],
              "span": {
                "end": 203,
                "start": 198
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 216,
                "start": 212
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
