crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__word-hash.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 155,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hash#",
                  "type": "text"
                }
              ],
              "raw_text": "hash#",
              "span": {
                "end": 161,
                "start": 156
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "word",
                  "type": "text"
                }
              ],
              "raw_text": "word",
              "span": {
                "end": 166,
                "start": 162
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 170,
                "start": 167
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "another#",
                  "type": "text"
                }
              ],
              "raw_text": "another#",
              "span": {
                "end": 179,
                "start": 171
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
