crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__word-hyphen.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test word ending in hyphen",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 194,
                "start": 191
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "man-",
                  "type": "text"
                }
              ],
              "raw_text": "man-",
              "span": {
                "end": 199,
                "start": 195
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 204,
                "start": 200
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 207,
                "start": 205
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 211,
                "start": 208
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "world",
                  "type": "text"
                }
              ],
              "raw_text": "world",
              "span": {
                "end": 217,
                "start": 212
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "isn't",
                  "type": "text"
                }
              ],
              "raw_text": "isn't",
              "span": {
                "end": 223,
                "start": 218
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 228,
                "start": 224
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
