crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__word-pos.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "zho",
          "yue"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "zho, yue",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "zho, yue",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "23-JUL-1964",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "$n in words, with or without @s stuff",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 239,
                "start": 236
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bar",
                  "type": "text"
                }
              ],
              "part_of_speech": "n",
              "raw_text": "bar$n",
              "span": {
                "end": 245,
                "start": 240
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "baz",
                  "type": "text"
                }
              ],
              "raw_text": "baz",
              "span": {
                "end": 249,
                "start": 246
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 261,
                "start": 258
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 267,
                "start": 262
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 272,
                "start": 268
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 275,
                "start": 273
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "type": "shortcut"
              },
              "part_of_speech": "n",
              "raw_text": "hao3@s$n",
              "span": {
                "end": 284,
                "start": 276
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 296,
                "start": 293
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 302,
                "start": 297
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 307,
                "start": 303
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 310,
                "start": 308
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "zho",
                "type": "explicit"
              },
              "part_of_speech": "n",
              "raw_text": "hao3@s:zho$n",
              "span": {
                "end": 323,
                "start": 311
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 335,
                "start": 332
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 341,
                "start": 336
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 346,
                "start": 342
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 349,
                "start": 347
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": [
                  "eng",
                  "zho",
                  "fra"
                ],
                "type": "multiple"
              },
              "part_of_speech": "n",
              "raw_text": "hao3@s:eng+zho+fra$n",
              "span": {
                "end": 370,
                "start": 350
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 382,
                "start": 379
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 388,
                "start": 383
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 393,
                "start": 389
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 396,
                "start": 394
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": [
                  "eng",
                  "zho",
                  "fra"
                ],
                "type": "ambiguous"
              },
              "part_of_speech": "n",
              "raw_text": "hao3@s:eng&zho&fra$n",
              "span": {
                "end": 417,
                "start": 397
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "with subcategories",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 458,
                "start": 455
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bar",
                  "type": "text"
                }
              ],
              "part_of_speech": "n:m:l",
              "raw_text": "bar$n:m:l",
              "span": {
                "end": 468,
                "start": 459
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "baz",
                  "type": "text"
                }
              ],
              "raw_text": "baz",
              "span": {
                "end": 472,
                "start": 469
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "zho, yue",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "zho, yue",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
